--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies (Potter)
         run: |
           python -m pip install --upgrade pip
-          pip install pytest scikit-learn joblib pandas
+          pip install -r requirements.txt
 
       - name: Run training (Potter)
         run: |
